Got first call working to get project information.

--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,7 @@ dependencies {
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
+
+applicationDefaultJvmArgs = [
+        '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005'
+]
